# outpost

./: .air.toml  .env.dev  .env.example  .env.test  .gitignore  .outpost.yaml  .outpost.yaml.dev  .outpost.yaml.example  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REDIS_MIGRATION.md  docker-compose.yml  dump.rdb  go.mod  go.sum
.cursor/rules/: agent-evaluation-authoring.mdc
.github/workflows/: claude.yml  docs-agent-eval-ci.yml  release.yml  sdk-generate-on-release-dispatch.yml  sdk-generate-on-release.yml  sdk-generate-one.yml  sdk_generation_outpost_go.yaml  sdk_generation_outpost_python.yaml  sdk_generation_outpost_ts.yaml  sdk_publish_outpost_go.yaml  speakeasy-workflow-executor-v15.yml  spec-sdk-tests-vs-release.yml  spec-sdk-tests.yml  trigger-website-deploy.yml  unit-tests.yml  update-compose-version.yml
.plans/api-openapi-sync/: README.md  action-plan.md  (+4 more)
.speakeasy/: workflow.yaml
contributing/: config.md  getting-started.md  mq.md  release.md  sdks.md  step-by-step.md  test.md
docs/: .gitignore  AGENTS.md  README.md  TEMP-hookdeck-outpost-onboarding-status.md  package-lock.json  package.json  zudoku.config.ts
examples/: README.md
examples/sdk-python/: README.md  pyproject.toml  requirements.txt  run-auth.sh
examples/sdk-python/example/: auth.py  create_destination.py  publish_event.py
scripts/: migrate-redis-keys.sh  test.sh
spec-sdk-tests/: .env.example  .gitignore  .mocharc.json  README.md  TEST_STATUS.md  package.json  test-setup.ts  tsconfig.json
website/: package-lock.json  package.json  vercel.json
(+2400 files in other folders)
